# Portfolio

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  package.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  tailwind.config.js  vite.config.js  zappa_settings.json
.github/: copilot-instructions.md
.github/workflows/: aws-deploy.yml  ci-cd.yml  ci.yml
docs/: AWS_DEPLOYMENT.md  DEPLOYMENT.md
helm/portfolio/: Chart.yaml  values.yaml
helm/portfolio/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
k8s/overlays/development/: kustomization.yaml
k8s/overlays/production/: kustomization.yaml
nginx/: nginx.conf
scripts/: upload_static.py
src/: __init__.py  app.py  aws_config.py  extensions.py  health.py
src/config/: __init__.py  cloud.py  secrets.py  settings.py
src/forms/: __init__.py  contact.py
src/routes/: __init__.py  api.py  contact.py  main.py  privacy.py
src/utils/: __init__.py  error_handlers.py  sanitize.py
static/css/: main.css
static/js/: main.js
static/src/: App.jsx  main.js  main.jsx  styles.css
static/src/components/common/: Counter.jsx  JourneyItem.jsx  MagneticButton.jsx  SectionReveal.jsx  TiltCard.jsx  Typewriter.jsx
static/src/components/layout/: Footer.jsx  Navbar.jsx  ScrollProgress.jsx  ScrollToTop.jsx
static/src/components/ui/: BackgroundOrbs.jsx  CursorGlow.jsx  Particles.jsx  Toast.jsx
static/src/context/: ToastContext.jsx
static/src/hooks/: useContactForm.js  useCounter.js  useIntersectionReveal.js  useMagnetic.js  useNavbar.js  useScrollProgress.js  useScrollToTop.js  useTilt.js  useTypewriter.js
static/src/pages/: AboutPage.jsx  ContactPage.jsx  CookiePolicyPage.jsx  HomePage.jsx  NotFoundPage.jsx  PrivacyPolicyPage.jsx  ProjectsPage.jsx  SkillsPage.jsx  TermsPage.jsx
static/src/utils/: api.js  helpers.js
templates/: base.html  base_modern.html  base_tailwind.html  spa.html
templates/errors/: 400.html  403.html  404.html  429.html  500.html
templates/pages/: about.html  contact.html  contact_success.html  cookie_policy.html  index.html  privacy_policy.html  projects.html  skills.html  terms.html
tests/: __init__.py  conftest.py  test_accessibility.py  test_contact.py  test_routes.py  test_security.py
